--- a/Project-Gorilla/index.html
+++ b/Project-Gorilla/index.html
@@ -8,10 +8,26 @@
 </head>
 <body>
     <!-- MENU NAVBAR -->
+    <nav>
+        <div class="logo">
+          <h4>B4LL</h4>
+        </div>
+        <ul class="nav-links">
+          <li><a href="#">Concept</a></li>
+          <li><a href="#">News</a></li>
+          <li><a href="#">Video</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+      </nav>
 
-
-
-
+    <!-- MAIN PAGE -->
+    <header>
+        <h2>Une image ou un slide</h2>
+    </header>
 
 
 
