--- a/Project-Gorilla/index.html
+++ b/Project-Gorilla/index.html
@@ -10,13 +10,15 @@
     <!-- MENU NAVBAR -->
     <nav>
         <div class="logo">
-          <h4>B4LL</h4>
+          <h1>B4LL</h1>
+          <h3>Ball for All</h3>
         </div>
+
         <ul class="nav-links">
           <li><a href="#">Concept</a></li>
-          <li><a href="#">News</a></li>
           <li><a href="#">Video</a></li>
           <li><a href="#">Contact</a></li>
+          <li><a href="#">Reservation</a></li>
         </ul>
         <div class="burger">
           <div class="line1"></div>
@@ -24,15 +26,36 @@
           <div class="line3"></div>
       </nav>
 
-    <!-- MAIN PAGE -->
-    <header>
-        <h2>Une image ou un slide</h2>
-    </header>
+    <!-- START main page -->
+    <main>
+      <!-- IMAGE SLIDER -->
+      <header>
+      <h2>Une image ou un slide</h2>
+      </header>
+    
+      
+      <!-- Article -->
+      <article>
+        <h2>Article Heading</h2>
+        <h4>Article text</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et ante ut urna mattis aliquet a nec eros. Aliquam eros neque, viverra eget sollicitudin eu, maximus sit amet velit. Duis vitae pharetra turpis. Duis eleifend eu nisl venenatis vestibulum. Nulla vestibulum tempus finibus. Praesent nisl quam, volutpat eget aliquet porttitor, sodales quis nibh. Praesent efficitur purus a tincidunt mattis. Aliquam tincidunt orci ut congue rhoncus. Nulla lacus urna, lacinia pretium erat quis, eleifend aliquam nisi. Pellentesque posuere tincidunt sollicitudin. Praesent consectetur laoreet luctus. Quisque tellus purus, sollicitudin sed elementum a, congue in risus.
+          Duis et turpis mauris. Aliquam mattis lectus et sem volutpat blandit ac sit amet augue. Aenean at elementum urna. Nunc ullamcorper malesuada velit vel luctus. In aliquam massa vitae tempus venenatis. Aliquam erat volutpat. Morbi fermentum dolor ut velit ornare varius. Maecenas congue magna eu lorem faucibus elementum. Phasellus eleifend magna non erat mattis blandit. Donec mauris neque, porttitor ut semper ac, imperdiet eget lacus. Donec sit amet ante ac odio tempor faucibus. Nulla eleifend dolor eu dictum fringilla. Maecenas cursus rutrum dolor.</p>
+        <p>Donec ultricies euismod aliquet. Morbi ullamcorper turpis et varius sodales. Nullam elementum enim posuere massa eleifend, cursus finibus ante venenatis. Aenean a egestas dolor. Praesent in eros eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent rhoncus, leo eu tempor mattis, purus mi luctus neque, vitae iaculis ante velit vel ipsum. Aenean nec commodo erat, at accumsan ex. Mauris nec luctus turpis. Quisque non quam felis. Aliquam fermentum arcu nunc, at mollis arcu dignissim nec. Aliquam sed aliquam ex. Donec quis elementum purus. Vestibulum risus tortor, blandit ut volutpat sed, volutpat et tortor. Vestibulum fringilla id erat ultrices egestas. Etiam volutpat nibh et justo scelerisque suscipit.
+          Duis accumsan lacus quis neque tristique, ac egestas justo cursus. Quisque pellentesque risus eu rutrum feugiat. Sed luctus interdum interdum. Donec volutpat justo ac ligula dignissim mollis. Etiam id orci quis mauris tincidunt imperdiet. Morbi lobortis dui ut libero vehicula consequat. Sed vitae nibh finibus, sagittis nunc sit amet, ultrices neque. Nunc ut porttitor est, et pharetra diam. Integer tincidunt euismod massa pulvinar faucibus. Proin eu viverra ante, non molestie odio. Suspendisse non elit ut nisi hendrerit porta. Donec orci felis, maximus nec viverra sit amet, consequat rhoncus purus. Sed id dui in arcu feugiat venenatis non vitae metus. Nunc nisi enim, malesuada et accumsan at, tempor eget dui. Cras efficitur erat a arcu tempor pulvinar. Phasellus vitae lorem eros.</p>
+      <aside>
+          <h2>Aside Heading</h2>
+          <p>Maecenas congue molestie ullamcorper. Maecenas id sollicitudin lectus. Aliquam porta bibendum mauris, vitae consequat risus feugiat a. Ut condimentum hendrerit massa, eu malesuada sem ultricies sed. Maecenas consectetur, nunc condimentum suscipit mattis, enim lectus fermentum nulla, quis sollicitudin eros turpis sit amet nibh. Donec sit amet imperdiet odio. Vivamus a massa finibus, tincidunt tortor quis, ultrices enim. Fusce et pharetra ipsum. Fusce molestie felis non volutpat egestas. Proin luctus auctor suscipit. Curabitur laoreet mi sed dolor accumsan, id placerat magna ultricies. Sed non massa cursus, suscipit ex at, viverra odio. Etiam lobortis enim nec dui egestas, dignissim facilisis libero facilisis. Donec et pulvinar justo, quis pellentesque dui. Aliquam vulputate leo vel tellus luctus luctus.
+          </p>
+      </aside>
+      </article>
+    </main>
+    <!-- END main page -->
 
-
-
-
-
-
+    <!-- footer -->
+    <footer>
+      <div class="footer-left">LEFT</div>
+      <div class="footer-mid">MID</div>
+      <div class="footer-right">RIGHT</div>
+    </footer>
 </body>
 </html>
