--- a/Project-Gorilla/index.html
+++ b/Project-Gorilla/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- MENU NAVBAR -->
     <nav>
-        <div class="logo">
+        <div class="logo" id="home">
           <h1>B4LL</h1>
           <h3>Ball for All</h3>
         </div>
@@ -53,9 +53,26 @@
 
     <!-- footer -->
     <footer>
-      <div class="footer-left">LEFT</div>
-      <div class="footer-mid">MID</div>
-      <div class="footer-right">RIGHT</div>
+      <div class="footer-left">
+        <div class="footerHeader">Retrouvez nous sur les réseaux !</div>
+        <ul class="social-links">
+          <li><a href="http://www.instragram.com"><img src="images/logo_instagram_64.png" alt="logo Instagram"></a></li>
+          <li><a href="http://www.facebook.com"><img src="images/logo_facebook_64.png" alt="logo Facebook"></a></li>
+          <li><a href="http://www.twitter.com"><img src="images/logo_twitter_64.png" alt="logo Twitter"></a></li>
+        </ul>
+      </div>
+      <div class="footer-mid"><a href="#"><img src="images/net-white.png" alt="basketball net"></a></div>
+      <div class="footer-right">
+        <div class="footerHeader">Besoin d'aide ?</div>
+        <ul>
+          
+          <li><a href="contact.html">Nous contacter</a></li>
+          <li><a href="mentions.html">Mentions Légales</a></li>
+          
+        </ul>
+      </div>
     </footer>
 </body>
 </html>
+
+<!--style="width: 64px; height: 64px;"-->
