--- a/Project-Gorilla/index.html
+++ b/Project-Gorilla/index.html
@@ -72,6 +72,11 @@
         </ul>
       </div>
     </footer>
+    <!--END footer-->
+    
+    <!--script-->
+    <script src="main.js"></script>
+
 </body>
 </html>
 
