--- a/Project-Gorilla/index.html
+++ b/Project-Gorilla/index.html
@@ -6,6 +6,8 @@
     <title>Project Gorilla</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
+    <!-- petit icone dans l'onglet navigateur.-->
+    <link rel="icon" href="images/favicon-ball-3stripes.ico" sizes="16x16" type="image/ico">
 </head>
 <body>
     <!-- MENU NAVBAR -->
