--- a/Project-Gorilla/index.html
+++ b/Project-Gorilla/index.html
@@ -6,6 +6,7 @@
     <title>Project Gorilla</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <!-- petit icone dans l'onglet navigateur.-->
     <link rel="icon" href="images/favicon-ball-3stripes.ico" sizes="16x16" type="image/ico">
 </head>
@@ -36,7 +37,8 @@
         <div class="overlay"></div>
         <div class="description">
           <h2>Looking to ball ?</h2>
-          <p>Alone or with friends, you will always find teamates on our courts !</p>
+          <p>Alone or with friends, you will always find teamates on our courts</p>
+          <a class="btn btn-primary" href="#" role="button">C'est parti !</a>
         </div>
       </header>
     
