--- a/Project-Gorilla/contact.html
+++ b/Project-Gorilla/contact.html
@@ -31,9 +31,32 @@
 
     <!-- START main page -->
     <main>
-    
-      
-      <!-- Article -->
+    <!-- formulaire -->
+    <div class="container">
+      <div class="row">
+        div.
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <article>
         <h2>Contact</h2>
         <h4>Formulaire</h4>
