--- a/Project-Gorilla/index.html
+++ b/Project-Gorilla/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&display=swap" rel="stylesheet">
     <!-- petit icone dans l'onglet navigateur.-->
     <link rel="icon" href="images/favicon-ball-3stripes.ico" sizes="16x16" type="image/ico">
 </head>
